[package]
name = "kafka_in_action"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.24", features = ["derive"] }
futures = "0.3.25"
# Builds librdkafka from sources. 
# If build fails, see https://github.com/fede1024/rust-rdkafka#installation
rdkafka = { version = "0.29", features = ["cmake-build"] }
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
