[package]
name = "kafka_in_action"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.24", features = ["derive"] }
derive_more = "0.99.17"
futures = "0.3.25"
itertools = "0.10.5"
lazy_static = "1.4.0"
# Builds librdkafka from sources. 
# If build fails, see https://github.com/fede1024/rust-rdkafka#installation
rdkafka = { version = "0.29", features = ["cmake-build"] }
schema_registry_converter = { version = "3.1.0", features = ["tokio", "blocking", "easy", "json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
